--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -419,7 +419,7 @@ services:
       - GRADIO_SERVER_PORT=7860
   audiocraft_plus:
     <<: *base_service
-    image: bean980310/audiocraft-plus
+    image: bean980310/audiocraft-plus:latest
     container_name: audiocraft_plus
     volumes:
       - ./audiocraft-models/models:/app/audiocraft_plus/models
