--- a/docker-compose.pull.yml
+++ b/docker-compose.pull.yml
@@ -341,6 +341,18 @@ services:
       - HF_HOME=/app/stable-audio-models/.cache/huggingface
       - GRADIO_SERVER_NAME=0.0.0.0
       - GRADIO_SERVER_PORT=7860
+  audiocraft_plus:
+    <<: *base_service
+    image: bean980310/audiocraft-plus:latest
+    container_name: audiocraft_plus
+    volumes:
+      - ./audiocraft-models/models:/app/audiocraft_plus/models
+      - ./workspace/audiocraft_plus/.cache/huggingface:/app/audiocraft_plus/.cache/huggingface
+    ports:
+      - "7877:7877"
+    pull_policy: if_not_present
+    environment:
+      - HF_HOME=/app/audiocraft_plus/.cache/huggingface
 
 volumes:
   ollama:
